fix: overflow on small screens, adjust iframe and img lengths

--- a/assets/scss/_content_project.scss
+++ b/assets/scss/_content_project.scss
@@ -194,3 +194,8 @@ h1, h2, h3, h4, h5, h6 {
   border-bottom-width: 1px;
   box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.05);
 }
+
+iframe{
+  max-width: 560px;
+  width: 100%;
+}
