--- a/assets/scss/_footer_project.scss
+++ b/assets/scss/_footer_project.scss
@@ -2,7 +2,7 @@
   background-color: $black;
   color: $white;
   line-height: 28px;
-  padding: 2.5rem 3rem 1.5rem;
+  padding: 2.5rem 2.5rem 1.5rem;
   z-index: 30;
   display: flex;
   flex-direction: column;
